[TG-202][fix] Fix overlapping label on scenario wizard page (#68)

--- a/src/app/scenarios/scenario-details/wizard/scenario-wizard/scenario-wizard.scss
+++ b/src/app/scenarios/scenario-details/wizard/scenario-wizard/scenario-wizard.scss
@@ -41,4 +41,15 @@ a {
     position: relative;
 }
 
+.input-field label {
+    position: relative;
+    left: 0;
+    font-family: Roboto-Regular;
+    font-size: 13px;
+}
+
+.scenario-name {
+    margin-top: 11px;
+}
+
 
